Update CategoryService.java